added sgd regression

--- a/mensprint.ipynb
+++ b/mensprint.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "  <th>Date:</th>             <td>Thu, 27 Jun 2019</td> <th>  Prob (F-statistic):</th> <td>2.16e-31</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>11:43:49</td>     <th>  Log-Likelihood:    </th> <td>  96.442</td>\n",
+       "  <th>Time:</th>                 <td>15:51:03</td>     <th>  Log-Likelihood:    </th> <td>  96.442</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   517</td>      <th>  AIC:               </th> <td>  -188.9</td>\n",
@@ -306,7 +306,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.231\n",
        "Method:                 Least Squares   F-statistic:                     155.6\n",
        "Date:                Thu, 27 Jun 2019   Prob (F-statistic):           2.16e-31\n",
-       "Time:                        11:43:49   Log-Likelihood:                 96.442\n",
+       "Time:                        15:51:03   Log-Likelihood:                 96.442\n",
        "No. Observations:                 517   AIC:                            -188.9\n",
        "Df Residuals:                     515   BIC:                            -180.4\n",
        "Df Model:                           1                                         \n",
@@ -328,7 +328,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,95 +336,239 @@
    "source": [
     "Xval = df3['100m']\n",
     "Yval = df3['200m']\n",
-    "Xval = sm.add_constant(Xval)\n",
+    "Xvalconst = sm.add_constant(Xval)\n",
     "\n",
-    "modelsm = sm.OLS(Yval, Xval).fit()\n",
+    "modelsm = sm.OLS(Yval, Xvalconst).fit()\n",
     "\n",
-    "YpredictionsSM = modelsm.predict(Xval)\n",
+    "Ypredictionssm = modelsm.predict(Xvalconst)\n",
     "modelsm.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([19.894167])"
+       "array([20.08078386])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# percent difference between true value and model prediction\n",
-    "reldiffsm=100*(Yval-YpredictionsSM)/Yval\n",
+    "reldiffsm=100*(Yval-Ypredictionssm)/Yval\n",
     "\n",
     "# test model\n",
-    "modelsm.predict((1.0,9.72))"
+    "modelsm.predict((1.0,9.90))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Performing linear regression using scikit-learn and adapting code from https://towardsdatascience.com/simple-and-multiple-linear-regression-in-python-c928425168f9 ###"
+    "### Performing linear regression using scikit-learn LinearRegression and adapting code from https://towardsdatascience.com/simple-and-multiple-linear-regression-in-python-c928425168f9 ###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import linear_model\n",
     "\n",
     "lm = linear_model.LinearRegression()\n",
-    "modelsk = lm.fit(Xval,Yval)\n",
+    "modellm = lm.fit(Xvalconst,Yval)\n",
     "\n",
-    "YpredictionsSK = lm.predict(Xval)"
+    "Ypredictionslm = lm.predict(Xvalconst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coeff_sk =  1.0367603115095\n",
-      "intercept_sk =  9.81685677286764\n"
+      "coeff_lm =  [0.         1.03676031]\n",
+      "intercept_lm =  9.81685677286764\n"
      ]
     }
    ],
    "source": [
     "# get R-squared\n",
-    "R2sk=lm.score(Xval,Yval)\n",
+    "R2lm=lm.score(Xvalconst,Yval)\n",
     "\n",
     "# get slope\n",
-    "coefsk=lm.coef_\n",
-    "print 'coeff_sk = ',coefsk[1]\n",
+    "coeflm=lm.coef_\n",
+    "print 'coeff_lm = ',coeflm\n",
     "\n",
     "# get intercept\n",
-    "constsk=lm.intercept_\n",
-    "print 'intercept_sk = ',constsk\n",
+    "constlm=lm.intercept_\n",
+    "print 'intercept_lm = ',constlm\n",
     "\n",
     "# check that two tools give same predictions\n",
     "#YpredictionsSM-YpredictionsSK"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performing linear regression using scikit-learn SGDRegressor (Stochastic Gradient Descent) ### "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clf = linear_model.SGDRegressor(max_iter=1000, tol=1e-3)\n",
+    "clf.fit(Xvalconst, Yval)\n",
+    "\n",
+    "Ypredictionsclf = clf.predict(Xvalconst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coeff_clf =  [0.19948813 1.967631  ]\n",
+      "intercept_clf =  [0.19955309]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get slope\n",
+    "coefclf=clf.coef_\n",
+    "print 'coeff_clf = ',coefclf\n",
+    "\n",
+    "# get intercept\n",
+    "constclf=clf.intercept_\n",
+    "print 'intercept_clf = ',constclf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20.05567494])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict([[1.0,9.99]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing LinearRegression and SGDRegressor ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       True\n",
+       "1       True\n",
+       "2       True\n",
+       "3      False\n",
+       "4       True\n",
+       "5      False\n",
+       "6      False\n",
+       "7      False\n",
+       "8      False\n",
+       "9      False\n",
+       "10     False\n",
+       "11     False\n",
+       "12     False\n",
+       "13     False\n",
+       "14     False\n",
+       "15     False\n",
+       "16      True\n",
+       "17      True\n",
+       "18      True\n",
+       "19      True\n",
+       "20     False\n",
+       "21      True\n",
+       "22      True\n",
+       "23     False\n",
+       "24     False\n",
+       "25     False\n",
+       "26      True\n",
+       "27      True\n",
+       "28     False\n",
+       "29     False\n",
+       "       ...  \n",
+       "487     True\n",
+       "488     True\n",
+       "489    False\n",
+       "490     True\n",
+       "491     True\n",
+       "492     True\n",
+       "493     True\n",
+       "494     True\n",
+       "495     True\n",
+       "496    False\n",
+       "497     True\n",
+       "498     True\n",
+       "499    False\n",
+       "500    False\n",
+       "501    False\n",
+       "502    False\n",
+       "503    False\n",
+       "504    False\n",
+       "505     True\n",
+       "506     True\n",
+       "507    False\n",
+       "508    False\n",
+       "509    False\n",
+       "510    False\n",
+       "511    False\n",
+       "512    False\n",
+       "513     True\n",
+       "514    False\n",
+       "515     True\n",
+       "516     True\n",
+       "Name: 200m, Length: 517, dtype: bool"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs((Yval-Ypredictionsclf)/Yval)<abs((Yval-Ypredictionslm)/Yval)"
+   ]
   },
   {
    "cell_type": "code",
