--- a/mensprint.ipynb
+++ b/mensprint.ipynb
@@ -52,7 +52,7 @@
     "# 0<npage<=17\n",
     "npage=15\n",
     "\n",
-    "# determine header to open the webpage\n",
+    "# determine header to open the webpage (Inspect Element, Network, Headers)\n",
     "headers = {'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:64.0) Gecko/20100101 Firefox/64.0'}"
    ]
   },
