--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -39,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# choose number of pages of results we want to include from the IAAF lists (for both genders)\n",
-    "npage=15\n",
+    "# choose number of pages of results we want to include from the World Athletics lists (for both genders)\n",
+    "npage=5\n",
     "\n",
     "# determine header to open the webpage (Inspect Element, Network, Headers)\n",
     "headers = {'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0'}"
@@ -68,8 +68,8 @@
     "while ip<=npage:\n",
     "    \n",
     "    # get url and create a page\n",
-    "    url1='http://www.iaaf.org/records/all-time-toplists/sprints/100-metres/outdoor/men/senior?page=' + str(ip)\n",
-    "    url2='http://www.iaaf.org/records/all-time-toplists/sprints/200-metres/outdoor/men/senior?page=' + str(ip)\n",
+    "    url1='http://www.worldathletics.org/records/all-time-toplists/sprints/100-metres/outdoor/men/senior?page=' + str(ip)\n",
+    "    url2='http://www.worldathletics.org/records/all-time-toplists/sprints/200-metres/outdoor/men/senior?page=' + str(ip)\n",
     "    page1 = requests.get(url1, headers=headers)\n",
     "    page2 = requests.get(url2, headers=headers)\n",
     "    \n",
@@ -82,29 +82,29 @@
     "    tr2_elements = doc2.xpath('//tr')\n",
     "    \n",
     "    if ip==1:\n",
-    "        # in our case the table starts at position 18 (with the header)\n",
-    "        tr1_elements_final += tr1_elements[18:]\n",
-    "        tr2_elements_final += tr2_elements[18:]\n",
+    "        # in our case the table starts at position 0 (with the header)\n",
+    "        tr1_elements_final += tr1_elements\n",
+    "        tr2_elements_final += tr2_elements\n",
     "    else:\n",
     "        # without including the header again\n",
-    "        tr1_elements_final += tr1_elements[19:]\n",
-    "        tr2_elements_final += tr2_elements[19:]\n",
+    "        tr1_elements_final += tr1_elements[1:]\n",
+    "        tr2_elements_final += tr2_elements[1:]\n",
     "        \n",
     "    ip+=1\n",
     "    \n",
     "# women's results\n",
     "ip=1\n",
     "while ip<=npage:\n",
-    "    url1='http://www.iaaf.org/records/all-time-toplists/sprints/100-metres/outdoor/women/senior?page=' + str(ip)\n",
-    "    url2='http://www.iaaf.org/records/all-time-toplists/sprints/200-metres/outdoor/women/senior?page=' + str(ip)\n",
+    "    url1='http://www.worldathletics.org/records/all-time-toplists/sprints/100-metres/outdoor/women/senior?page=' + str(ip)\n",
+    "    url2='http://www.worldathletics.org/records/all-time-toplists/sprints/200-metres/outdoor/women/senior?page=' + str(ip)\n",
     "    page1 = requests.get(url1, headers=headers)\n",
     "    page2 = requests.get(url2, headers=headers)\n",
     "    doc1 = lh.fromstring(page1.content)\n",
     "    doc2 = lh.fromstring(page2.content)\n",
     "    tr1_elements = doc1.xpath('//tr')\n",
     "    tr2_elements = doc2.xpath('//tr')\n",
-    "    tr1_elements_final += tr1_elements[19:]\n",
-    "    tr2_elements_final += tr2_elements[19:]\n",
+    "    tr1_elements_final += tr1_elements[1:]\n",
+    "    tr2_elements_final += tr2_elements[1:]\n",
     "    ip+=1"
    ]
   },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -386,91 +386,91 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2995</th>\n",
-       "      <td>1474</td>\n",
-       "      <td>23.35</td>\n",
-       "      <td>+0.4</td>\n",
-       "      <td>Mayumi WATANABE</td>\n",
-       "      <td>06 JUN 1983</td>\n",
-       "      <td>JPN</td>\n",
-       "      <td>1f1</td>\n",
-       "      <td>Fukuroi (JPN)</td>\n",
-       "      <td>03 MAY 2013</td>\n",
-       "      <td>1099</td>\n",
+       "      <th>995</th>\n",
+       "      <td>482</td>\n",
+       "      <td>22.84</td>\n",
+       "      <td>+1.3</td>\n",
+       "      <td>Jaevin REED</td>\n",
+       "      <td>05 FEB 1998</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1f3</td>\n",
+       "      <td>San Antonio, TX (USA)</td>\n",
+       "      <td>25 MAR 2017</td>\n",
+       "      <td>1151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2996</th>\n",
-       "      <td>1474</td>\n",
-       "      <td>23.35</td>\n",
-       "      <td>+2.0</td>\n",
-       "      <td>Jasmine WEBB</td>\n",
-       "      <td>13 FEB 1992</td>\n",
-       "      <td>USA</td>\n",
+       "      <th>996</th>\n",
+       "      <td>497</td>\n",
+       "      <td>22.85</td>\n",
+       "      <td></td>\n",
+       "      <td>Silvia CHIVÁS</td>\n",
+       "      <td>10 SEP 1954</td>\n",
+       "      <td>CUB</td>\n",
        "      <td>1</td>\n",
-       "      <td>Lake Charles, LA (USA)</td>\n",
-       "      <td>12 MAY 2013</td>\n",
-       "      <td>1099</td>\n",
+       "      <td>Guadalajara (MEX)</td>\n",
+       "      <td>12 AUG 1977</td>\n",
+       "      <td>1150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2997</th>\n",
-       "      <td>1474</td>\n",
-       "      <td>23.35</td>\n",
+       "      <th>997</th>\n",
+       "      <td>497</td>\n",
+       "      <td>22.85</td>\n",
+       "      <td>+0.5</td>\n",
+       "      <td>Ewa PISIEWICZ</td>\n",
+       "      <td>07 MAY 1962</td>\n",
+       "      <td>POL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zabrze (POL)</td>\n",
+       "      <td>25 AUG 1985</td>\n",
+       "      <td>1150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>497</td>\n",
+       "      <td>22.85</td>\n",
+       "      <td>+0.5</td>\n",
+       "      <td>Vera ZAYTSEVA</td>\n",
+       "      <td>13 OCT 1963</td>\n",
+       "      <td>URS</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Chelyabinsk (URS)</td>\n",
+       "      <td>21 JUN 1987</td>\n",
+       "      <td>1150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>497</td>\n",
+       "      <td>22.85</td>\n",
        "      <td>+1.1</td>\n",
-       "      <td>Alyona MAMINA</td>\n",
-       "      <td>30 MAY 1990</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Zhukovskiy (RUS)</td>\n",
-       "      <td>30 JUN 2013</td>\n",
-       "      <td>1099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2998</th>\n",
-       "      <td>1474</td>\n",
-       "      <td>23.35</td>\n",
-       "      <td>+0.9</td>\n",
-       "      <td>Huijun LIN</td>\n",
-       "      <td>01 FEB 1993</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>1h3</td>\n",
-       "      <td>Incheon (KOR)</td>\n",
-       "      <td>30 SEP 2014</td>\n",
-       "      <td>1099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2999</th>\n",
-       "      <td>1474</td>\n",
-       "      <td>23.35</td>\n",
-       "      <td>+1.6</td>\n",
-       "      <td>Dominique KIMPEL</td>\n",
-       "      <td>06 FEB 1993</td>\n",
+       "      <td>Anita HOWARD</td>\n",
+       "      <td>22 MAR 1969</td>\n",
        "      <td>USA</td>\n",
-       "      <td>5f4</td>\n",
-       "      <td>Gainesville, FL (USA)</td>\n",
-       "      <td>03 APR 2015</td>\n",
-       "      <td>1099</td>\n",
+       "      <td>1f2</td>\n",
+       "      <td>New York, NY (USA)</td>\n",
+       "      <td>22 JUL 1989</td>\n",
+       "      <td>1150</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Rank   200m  WIND        Competitor          DOB  Nat  Pos  \\\n",
-       "2995  1474  23.35  +0.4   Mayumi WATANABE  06 JUN 1983  JPN  1f1   \n",
-       "2996  1474  23.35  +2.0      Jasmine WEBB  13 FEB 1992  USA    1   \n",
-       "2997  1474  23.35  +1.1     Alyona MAMINA  30 MAY 1990  RUS    3   \n",
-       "2998  1474  23.35  +0.9        Huijun LIN  01 FEB 1993  CHN  1h3   \n",
-       "2999  1474  23.35  +1.6  Dominique KIMPEL  06 FEB 1993  USA  5f4   \n",
+       "    Rank   200m  WIND     Competitor          DOB  Nat  Pos  \\\n",
+       "995  482  22.84  +1.3    Jaevin REED  05 FEB 1998  USA  1f3   \n",
+       "996  497  22.85        Silvia CHIVÁS  10 SEP 1954  CUB    1   \n",
+       "997  497  22.85  +0.5  Ewa PISIEWICZ  07 MAY 1962  POL    1   \n",
+       "998  497  22.85  +0.5  Vera ZAYTSEVA  13 OCT 1963  URS    2   \n",
+       "999  497  22.85  +1.1   Anita HOWARD  22 MAR 1969  USA  1f2   \n",
        "\n",
-       "                       Venue         Date Results Score  \n",
-       "2995           Fukuroi (JPN)  03 MAY 2013          1099  \n",
-       "2996  Lake Charles, LA (USA)  12 MAY 2013          1099  \n",
-       "2997        Zhukovskiy (RUS)  30 JUN 2013          1099  \n",
-       "2998           Incheon (KOR)  30 SEP 2014          1099  \n",
-       "2999   Gainesville, FL (USA)  03 APR 2015          1099  "
+       "                     Venue         Date Results Score  \n",
+       "995  San Antonio, TX (USA)  25 MAR 2017          1151  \n",
+       "996      Guadalajara (MEX)  12 AUG 1977          1150  \n",
+       "997           Zabrze (POL)  25 AUG 1985          1150  \n",
+       "998      Chelyabinsk (URS)  21 JUN 1987          1150  \n",
+       "999     New York, NY (USA)  22 JUL 1989          1150  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
